force-app/main/default/objects/LSF_Order__c/LSF_Order__c.object-meta.xml
<CustomObject>
    <label>LSF Order</label>
    <nameField>
        <displayFormat>ORD-{0000000000}</displayFormat>
        <label>Order name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LSF Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>