force-app/main/default/objects/LSF_Order__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>LSF_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>