force-app/main/default/objects/LSF_Order__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <label>Order Total</label>
    <summarizedField>LSF_Order_Detail__c.Total_Price__c</summarizedField>
    <summaryForeignKey>LSF_Order_Detail__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>